# zk-kyc-identity-layer

./: README.md  jest.config.ts  package-lock.json  package.json
__tests__/: prover.test.ts  stellar-client.test.ts
app/: globals.css
circuits/age_verification/: Nargo.toml
circuits/age_verification/src/: main.nr
components/zkkyc/: age-verification-form.tsx  connect-wallet.tsx  credential-display.tsx  proof-generator.tsx  verification-status.tsx
contracts/zkkyc_verifier/: Cargo.toml
contracts/zkkyc_verifier/src/: humantech.rs  lib.rs
lib/: types.ts
lib/noir/: circuits.ts  prover.ts
lib/stellar/: client.ts
