[package]
name = "zkkyc-verifier"
version = "1.0.0"
authors = ["zkKYC Identity Layer"]
license = "MIT"
edition = "2021"
publish = false
description = "Zero-knowledge age verification contract for Stellar/Soroban"
repository = "https://github.com/zkkyc/zkkyc-identity-layer"

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
